--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React D3 Map Example</title>
+    <title>Tokyo Map</title>
   </head>
   <body>
+    <h1 class="title">東京人口推移マップ</h1>
     <div id="root"></div>
     <!-- Reactアプリケーションのビルド後のJavaScriptファイルを読み込む -->
     <script type="module" src="src/main.jsx"></script>
