--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tokyo Map</title>
   </head>
   <body>
-    <h1 class="title">東京人口推移マップ</h1>
+    <h1 class="title">東京23区人口推移</h1>
     <div id="root"></div>
     <!-- Reactアプリケーションのビルド後のJavaScriptファイルを読み込む -->
     <script type="module" src="src/main.jsx"></script>
