棒線グラフ

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tokyo Map</title>
+    <title>Tokyo 23 wards</title>
   </head>
   <body>
-    <h1 class="title">東京23区人口推移</h1>
+    <h1 class="title">東京23区コロナ影響と人口推移</h1>
     <div id="root"></div>
-    <!-- Reactアプリケーションのビルド後のJavaScriptファイルを読み込む -->
+
     <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
