感染対策を追加

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <h1 class="title">東京23区コロナ影響と人口推移</h1>
     <div id="root"></div>
 
+    <!-- URLを表示するフッターを追加 -->
+    <footer>
+      <p>
+        感染対策:
+        <a
+          href="https://www.mhlw.go.jp/stf/seisakunitsuite/bunya/0000164708_00001.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          厚生労働省 - 新型コロナウイルス感染症関連情報
+        </a>
+      </p>
+    </footer>
+
     <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
